--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,80 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>React Example - Quick Start - Basic Example</title>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="robots" content="noindex" />
+    <style media="only screen">
+      :root {
+        overflow: hidden;
+        font-family: -apple-system, "system-ui", "Segoe UI", Roboto,
+          "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+          "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+          "Noto Color Emoji";
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+        --button-background-color: transparent;
+        --button-text-color: #212529;
+        --button-color-border-primary: #d0d5dd;
+        --button-hover-background-color: rgba(0, 0, 0, 0.1);
+      }
+
+      :root[data-dark-mode="false"] {
+        background: white;
+      }
+
+      :root[data-dark-mode="true"] {
+        background: #192232;
+        color: white;
+
+        --button-text-color: #f8f9fa;
+        --button-color-border-primary: rgba(255, 255, 255, 0.2);
+        --button-hover-background-color: #2a343e;
+      }
+
+      :root,
+      body,
+      #root {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        box-sizing: border-box;
+      }
+
+      #root {
+        display: grid;
+        grid-auto-rows: minmax(0, 1fr);
+        grid-auto-columns: minmax(0, 1fr);
+      }
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      var appLocation =
+        "/charts/reactFunctionalTs/quick-start/examples/basic-example";
+      var boilerplatePath =
+        "/charts/example-runner/charts-react-ts-boilerplate";
+      var systemJsMap = {
+        "ag-charts-community":
+          "https://cdn.jsdelivr.net/npm/ag-charts-community@10.2.0/dist/package/main.cjs.js",
+        "ag-charts-enterprise":
+          "https://cdn.jsdelivr.net/npm/ag-charts-enterprise@10.2.0/dist/package/main.cjs.js",
+        "ag-charts-locale":
+          "https://cdn.jsdelivr.net/npm/ag-charts-locale@10.2.0/dist/package/main.cjs.js",
+        "ag-charts-react":
+          "https://cdn.jsdelivr.net/npm/ag-charts-react@10.2.0/",
+        "ag-charts-types":
+          "https://cdn.jsdelivr.net/npm/ag-charts-types@10.2.0/dist/package/main.cjs.js",
+      };
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/systemjs@0.19.47/dist/system.js"></script>
+    <script src="/charts/example-runner/charts-react-ts-boilerplate/systemjs.config.js"></script>
+    <script>
+      System.import(
+        "/charts/reactFunctionalTs/quick-start/examples/basic-example/index.tsx"
+      ).catch(function (err) {
+        console.error(err);
+      });
+    </script>
   </body>
 </html>
